<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BankersChoice</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>


    <string name="rules_qustion"> &#xf059;</string>
    <string name="dash_board">&#xf0e4;</string>
    <string name="bell">&#xf0f3;</string>
    <string name="icon_start"> &#xf0e7;</string>
    <string name="correct_icon">&#xf058;</string>
    <string name="wrong_answer">&#xf057;</string>
    <string name="download_icon">&#xf019;</string>
    <string name="speed_icon">&#xf135;</string>
    <string name="timer_icon">&#xf133;</string>

    <string name="icon_video">&#xf03d;</string>
    <string name="icon_bolt">&#xf0e7;</string>
    <string name="icon_review"> &#xf0e2;</string>

    <string name="icon_leftarrow">&#xf061;</string>
    <string name="icon_thumbsup">&#xf061;</string>
    <string name="share">&#xf1e0;</string>
    <string name="right_arrow">&#xf054;</string>

    <string name="left_icon">&#xf0d9;</string>
    <string name="right_icon">&#xf0da;</string>

    <string name="icon_download">&#xf019;</string>


    <string name="events">&#xf073;</string>
    <string name="offer">&#xf218;</string>
    <string name="updates">&#xf021;</string>
</resources>
