<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/accent_material_light"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".dashboard">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/dashboard_time_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/purple"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/exam_time_taken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Time"
                    android:textColor="@color/bright_foreground_inverse_material_dark"
                    android:textSize="@dimen/large_text" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Time taken "
                    android:textAppearance="?android:attr/textAppearanceSmall"

                    android:textColor="@color/abc_background_cache_hint_selector_material_light" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dashboard_score_ll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dashboard_time_ll"
                android:layout_centerHorizontal="true"
                android:background="@android:color/background_light"
                android:gravity="center"

                android:orientation="vertical"
                android:padding="30dp">

                <LinearLayout
                    android:layout_width="150dip"
                    android:layout_height="150dip"
                    android:background="@drawable/circle"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/score_daily_challenge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:text="179"
                        android:textColor="@color/abc_primary_text_disable_only_material_light"
                        android:textSize="@dimen/large_text" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Points"
                        android:textColor="@color/background_floating_material_dark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="Time Bonus"
                        android:textColor="@color/abc_background_cache_hint_selector_material_dark" />

                    <TextView
                        android:id="@+id/bonus_point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="50 Points"
                        android:textColor="@color/background_floating_material_dark" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dashboard_options_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dashboard_score_ll"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:id="@+id/expert_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Expert Video"
                        android:textSize="@dimen/small_text" />

                    <TextView
                        android:id="@+id/videoicon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_video"
                        android:textSize="@dimen/large_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/review_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center"

                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Review Answer"
                        android:textSize="@dimen/small_text" />

                    <TextView
                        android:id="@+id/reviewicon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_review"
                        android:textSize="@dimen/large_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/challenge_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Challenge Friends"
                        android:textSize="@dimen/small_text" />

                    <TextView
                        android:id="@+id/challengeicon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_thumbsup"
                        android:textSize="@dimen/large_text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dashboard_highscore_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dashboard_options_ll"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MY BEST SCORE "
                        android:textColor="@color/background_floating_material_dark"
                        android:textSize="@dimen/small_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/best_scoreFont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="&#xf14a;"
                            android:textColor="@color/background_floating_material_dark"
                            android:textSize="@dimen/large_text" />

                        <TextView
                            android:id="@+id/result"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="179"
                            android:textColor="@color/background_floating_material_dark"
                            android:textSize="@dimen/large_text" />


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/leaderboard"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="30"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:gravity="center"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Leader Board     "
                        android:textSize="@dimen/normal_text" />

                    <TextView
                        android:id="@+id/leadreboard_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_leftarrow"
                        android:textSize="@dimen/large_text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/speedChanlege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dashboard_highscore_ll"
                android:layout_marginTop="10dp"
                android:background="@color/orenge"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">


                <LinearLayout
                    android:id="@+id/math_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center"
                    android:orientation="horizontal"

                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Want to score more points ?"
                            android:textSize="@dimen/small_text"


                            />

                        <TextView
                            android:id="@+id/takespeedmathstest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Take Speed Maths Chanllenge   &#xf061;"
                            android:textSize="@dimen/normal_text"

                            />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/bolt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/icon_bolt"
                        android:textSize="@dimen/large_text" />
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>