<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:id="@+id/layoutQuestionsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutColor"
            android:layout_margin="20dp"
            android:layout_weight="80"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentQs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:text="2"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutColor"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/leftArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_icon"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rightArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/right_icon"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/review_q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/qNo"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="6"
                android:text="A."
                android:textSize="14sp" />

            <TextView
                android:id="@+id/answer"
                style="@style/textView_style"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="40"
                android:text="2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/imageString"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="20"
                android:text="23"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/qNo1"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="6"
                android:text="B."
                android:textSize="14sp" />

            <TextView
                android:id="@+id/answer1"
                style="@style/textView_style"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="40"
                android:text="2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/imageString1"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="20"
                android:text="23"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/qNo2"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="6"
                android:text="C."
                android:textSize="14sp" />

            <TextView
                android:id="@+id/answer2"
                style="@style/textView_style"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="40"
                android:text="2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/imageString2"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="20"
                android:text="23"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/qNo3"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="6"
                android:text="D."
                android:textSize="14sp" />

            <TextView
                android:id="@+id/answer3"
                style="@style/textView_style"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="40"
                android:text="2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/imageString3"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="20"
                android:text="23"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
